--- a/style.css
+++ b/style.css
@@ -22,3 +22,11 @@ body
 {
   font-family: Verdana, Arial;
 }
+
+.Popup
+{
+  text-align: center;
+  float: right;
+  width: 25%;
+  margin: 1em 0;
+}
