--- a/style.css
+++ b/style.css
@@ -1,15 +1,24 @@
+.popup
+{
+  width: 10%;
+  float: right;
+  padding: 16px;
+  margin: 16px;
+  background-color: #C0C0C0;
+}
 body
 {
-  margin:40px auto;
-  max-width:650px;
-  line-height:1.6;
   font-size:18px;
-  color:#444;
-  padding:010px
 }
-  h1,h2,h3
+h1,h2,h3,h4,h5,h6,p,ol
 {
-  line-height:1.2;
+  margin: 40px auto;
+  max-width:650px;
+  min-width: 400px;
+  line-height:1.6;
+  color:#444;
+  padding:010px;
+  text-align: justify;
 }
 
 .lineheight
@@ -21,10 +30,4 @@ body
 .eee
 {
   font-family: Verdana, Arial;
-}
-
-.Popup
-{
-  background-color: #ffff00;
-  float: right;
 }
